--- a/01-INTRO-REACT/index.html
+++ b/01-INTRO-REACT/index.html
@@ -17,7 +17,7 @@
     <script type="text/babel">
 
         const divRoot = document.querySelector('#root');
-        const nombre = 'Goku es bueno';
+        const nombre = 'Goku es buenodf';
 
         const h1Tag = <h1>Hola mi nombre es {nombre}</h1>;
 
