--- a/01-INTRO-REACT/index.html
+++ b/01-INTRO-REACT/index.html
@@ -19,7 +19,7 @@
         const divRoot = document.querySelector('#root');
         const nombre = 'Goku es buenodf';
 
-        const h1Tag = <h1>Hola mi nombre es {nombre}</h1>;
+        const h1Tag = <h1>Hola mi nombre de es es {nombre}</h1>;
 
         ReactDOM.render(h1Tag, divRoot);
 
